feat(custom-block): 支持设置列表视图中每一项的最大宽度 | Support setting the maximum width of each item in the list view.

--- a/src/styles/custom-block-list-view-board.less
+++ b/src/styles/custom-block-list-view-board.less
@@ -61,6 +61,7 @@
                         >[data-node-id].li {
                             /* 子看板 */
                             min-width: var(--custom-block-list-board-min-width);
+                            max-width: var(--custom-block-list-board-max-width);
                             margin-left: 0.25em;
                             margin-right: 0.25em;
 
