--- a/src/styles/custom-block-list-view-map.less
+++ b/src/styles/custom-block-list-view-map.less
@@ -212,6 +212,7 @@
                                         border-radius: var(--custom-block-border-radius);
                                         outline: 1px solid var(--b3-theme-on-surface);
                                         min-width: var(--custom-block-list-view-map-min-width);
+                                        max-width: var(--custom-block-list-view-map-max-width);
                                     }
                                 }
 
