--- a/src/styles/define.less
+++ b/src/styles/define.less
@@ -31,12 +31,18 @@
 
     /* 列表看板视图 - 看板项最小宽度 */
     --custom-block-list-board-min-width: 16em;
+    /* 列表看板视图 - 看板项最大宽度 */
+    --custom-block-list-board-max-width: none;
     
     /* 列表表格视图 - 表格项最小宽度 */
     --custom-block-list-view-table-min-width: 8em;
+    /* 列表表格视图 - 表格项最大宽度 */
+    --custom-block-list-view-table-max-width: none;
     
     /* 列表导图视图 - 列表项最小宽度 */
     --custom-block-list-view-map-min-width: 2em;
+    /* 列表导图视图 - 列表项最大宽度 */
+    --custom-block-list-view-map-max-width: none;
 }
 
 /* 弹幕滚动动画 */
