--- a/src/styles/siyuan.less
+++ b/src/styles/siyuan.less
@@ -51,7 +51,7 @@
         }
     }
 
-    [data-node-id][custom-jupyter-index] {
+    [data-node-id][custom-jupyter-type] {
         &::before {
             /* 运行序号 */
             content: "[" attr(custom-jupyter-index)"]:";
@@ -64,7 +64,7 @@
         }
 
         // 代码块
-        &.code-block {
+        &[custom-jupyter-type=code] {
 
             &::before {
                 /* 运行完成 */
@@ -94,7 +94,7 @@
         }
 
         // 输出块
-        &.sb {
+        &[custom-jupyter-type=output] {
             font-family: var(--b3-font-family-code); // 输出内容使用等宽字体
 
             &::before {
