--- a/src/styles/xterm.less
+++ b/src/styles/xterm.less
@@ -13,6 +13,14 @@
 // You should have received a copy of the GNU Affero General Public License
 // along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-@import (less) url(./styles/jupyter.less);
-@import (less) url(./styles/siyuan.less);
-@import (less) url(./styles/xterm.less);
+#preview {
+    .xterm {
+        .xterm-viewport {
+            overflow-y: auto;
+        }
+
+        .xterm-cursor {
+            display: none;
+        }
+    }
+}
