feat(custom-block): 添加 `悬浮显示` 功能 | Add `Floating Display` function.
REF: https://github.com/Zuoqiu-Yingyi/siyuan-plugin-custom-block/issues/12

--- a/src/styles/define.less
+++ b/src/styles/define.less
@@ -14,6 +14,9 @@
 // along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 :root {
+    /* 悬浮显示层级 */
+    --custom-block-position-sticky-z-index: 2;
+
     /* 弹幕滚动时间 */
     --custom-block-render-danmaku-time: 16s;
 
@@ -33,12 +36,12 @@
     --custom-block-list-board-min-width: 16em;
     /* 列表看板视图 - 看板项最大宽度 */
     --custom-block-list-board-max-width: none;
-    
+
     /* 列表表格视图 - 表格项最小宽度 */
     --custom-block-list-view-table-min-width: 8em;
     /* 列表表格视图 - 表格项最大宽度 */
     --custom-block-list-view-table-max-width: none;
-    
+
     /* 列表导图视图 - 列表项最小宽度 */
     --custom-block-list-view-map-min-width: 2em;
     /* 列表导图视图 - 列表项最大宽度 */
