--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -19,6 +19,7 @@
 @import (once) url(./custom-block-list-view-map.less);
 @import (once) url(./custom-block-list-view-table.less);
 @import (once) url(./custom-block-render-content.less);
+@import (once) url(./custom-block-position-sticky.less);
 @import (once) url(./custom-block-render-danmaku.less);
 @import (once) url(./custom-block-render-id.less);
 @import (once) url(./custom-block-render-index.less);
