perf(custom-block): 调整列表导图视图文本块换行模式 | Adjust the line break mode of the text block in the list mind-map view.

--- a/src/styles/custom-block-list-view-map.less
+++ b/src/styles/custom-block-list-view-map.less
@@ -206,7 +206,7 @@
                                     padding: 0;
 
                                     >[contenteditable][spellcheck] {
-                                        white-space: pre; // 保留换行
+                                        white-space: var(--custom-block-list-view-map-white-space);
                                         padding: 0 0.5em;
 
                                         border-radius: var(--custom-block-border-radius);
