--- a/src/styles/define.less
+++ b/src/styles/define.less
@@ -46,6 +46,8 @@
     --custom-block-list-view-map-min-width: 2em;
     /* 列表导图视图 - 列表项最大宽度 */
     --custom-block-list-view-map-max-width: none;
+    /* 列表导图视图 - 文本块换行模式 */
+    --custom-block-list-view-map-white-space: pre-wrap;
 }
 
 /* 弹幕滚动动画 */
