feat(custom-block): 添加一个用于在导出时启用/禁用样式的菜单项 | Add a menu item for enabling/disabling styles when exporting.

--- a/src/styles/custom-block-list-view-board.less
+++ b/src/styles/custom-block-list-view-board.less
@@ -42,9 +42,10 @@
 }
 
 :root {
-    &[plugin-custom-block~=list-view-board] {
+    &:not([plugin-custom-block-disabled~=list-view-board]) {
 
-        .b3-dialog__content,
+        body:has(> #preview[custom-block-export]),
+        .b3-dialog__content:has(> #preview[custom-block-export]),
         .protyle-content {
 
             [custom-block-list-view=board] {
