--- a/src/styles/custom-block-table-width-auto.less
+++ b/src/styles/custom-block-table-width-auto.less
@@ -16,13 +16,18 @@
 /* 表格自动宽度 */
 
 :root {
-    &[plugin-custom-block~=table-width-auto] {
-        .protyle-wysiwyg {
-            [custom-block-table-width~=auto] {
-                &[data-node-id].table {
-                    table {
-                        /* 自动宽度 */
-                        width: auto;
+    &:not([plugin-custom-block-disabled~=table-width-auto]) {
+
+        body:has(> #preview[custom-block-export]),
+        .b3-dialog__content:has(> #preview[custom-block-export]),
+        .protyle-content {
+            .protyle-wysiwyg {
+                [custom-block-table-width~=auto] {
+                    &[data-node-id].table {
+                        table {
+                            /* 自动宽度 */
+                            width: auto;
+                        }
                     }
                 }
             }
