--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -27,5 +27,6 @@
 @import (once) url(./custom-block-render-scroll.less);
 @import (once) url(./custom-block-table-width-auto.less);
 @import (once) url(./custom-block-table-width-equal.less);
+@import (once) url(./custom-block-user-modify.less);
 @import (once) url(./custom-block-width-full.less);
 @import (once) url(./custom-block-writing-mode.less);
