--- a/src/styles/custom-block-list-view-map.less
+++ b/src/styles/custom-block-list-view-map.less
@@ -71,6 +71,8 @@
                 }
 
                 [data-node-id] {
+                    margin: 0;
+                    padding: 0;
 
                     // 列表块
                     &.list {
@@ -155,11 +157,6 @@
                                 top: calc(50%);
                                 left: calc(2em - 20px);
                             }
-                        }
-
-                        >div:nth-child(2) {
-                            /* 修复单子项导航线错位问题 */
-                            margin-top: 4px !important;
                         }
 
                         >div.protyle-action {
