--- a/src/styles/custom-block-render-danmaku.less
+++ b/src/styles/custom-block-render-danmaku.less
@@ -1,30 +1,27 @@
 // Copyright (C) 2023 Zuoqiu Yingyi
-// 
+//
 // This program is free software: you can redistribute it and/or modify
 // it under the terms of the GNU Affero General Public License as
 // published by the Free Software Foundation, either version 3 of the
 // License, or (at your option) any later version.
-// 
+//
 // This program is distributed in the hope that it will be useful,
 // but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 // GNU Affero General Public License for more details.
-// 
+//
 // You should have received a copy of the GNU Affero General Public License
 // along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 :root {
-
     #preview,
-    &:not([plugin-custom-block-disabled~=render-danmaku]) {
-
+    &:not([plugin-custom-block-disabled~="render-danmaku"]) {
         body:has(> #preview[custom-block-export]),
         .b3-dialog__content:has(> #preview[custom-block-export]),
         .protyle-content {
             .protyle-wysiwyg {
-
-                &[custom-block-render~=danmaku]>[data-node-id],
-                [custom-block-render~=danmaku][data-node-id] {
+                &[custom-block-render~="danmaku"] > [data-node-id],
+                [custom-block-render~="danmaku"][data-node-id] {
                     /* 使用滚动动画 */
                     animation: var(--custom-block-render-danmaku-time) danmaku linear infinite normal;
 
