--- a/src/styles/custom-block-render-id.less
+++ b/src/styles/custom-block-render-id.less
@@ -1,15 +1,15 @@
 // Copyright (C) 2023 Zuoqiu Yingyi
-// 
+//
 // This program is free software: you can redistribute it and/or modify
 // it under the terms of the GNU Affero General Public License as
 // published by the Free Software Foundation, either version 3 of the
 // License, or (at your option) any later version.
-// 
+//
 // This program is distributed in the hope that it will be useful,
 // but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 // GNU Affero General Public License for more details.
-// 
+//
 // You should have received a copy of the GNU Affero General Public License
 // along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
@@ -17,17 +17,13 @@
 
 /* 显示块 ID */
 :root {
-
-    &:not([plugin-custom-block-disabled~=render-id]) {
-
+    &:not([plugin-custom-block-disabled~="render-id"]) {
         body:has(> #preview[custom-block-export]),
         .b3-dialog__content:has(> #preview[custom-block-export]),
         .protyle-content {
             .protyle-wysiwyg {
-
-                &[custom-block-render~=id],
-                [custom-block-render~=id] {
-
+                &[custom-block-render~="id"],
+                [custom-block-render~="id"] {
                     &,
                     & * {
                         .render-attr(data-node-id);
