--- a/src/styles/custom-block-render-scroll.less
+++ b/src/styles/custom-block-render-scroll.less
@@ -1,38 +1,34 @@
 // Copyright (C) 2023 Zuoqiu Yingyi
-// 
+//
 // This program is free software: you can redistribute it and/or modify
 // it under the terms of the GNU Affero General Public License as
 // published by the Free Software Foundation, either version 3 of the
 // License, or (at your option) any later version.
-// 
+//
 // This program is distributed in the hope that it will be useful,
 // but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 // GNU Affero General Public License for more details.
-// 
+//
 // You should have received a copy of the GNU Affero General Public License
 // along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 /* 块过长时设置块内纵向滚动条 */
 :root {
-
-    &:not([plugin-custom-block-disabled~=render-scroll]) {
-
+    &:not([plugin-custom-block-disabled~="render-scroll"]) {
         body:has(> #preview[custom-block-export]),
         .b3-dialog__content:has(> #preview[custom-block-export]),
         .protyle-content {
             .protyle-wysiwyg {
-
-                &[custom-block-render~=scroll]>[data-node-id],
-                [custom-block-render~=scroll][data-node-id] {
-
+                &[custom-block-render~="scroll"] > [data-node-id],
+                [custom-block-render~="scroll"][data-node-id] {
                     // >.protyle-icons,
-                    >.protyle-action {
+                    > .protyle-action {
                         /* 右上角悬浮控件 */
                         position: sticky;
                     }
 
-                    >.protyle-attr {
+                    > .protyle-attr {
                         .protyle-attr--refcount {
                             /* 块引用数量标示 */
                             right: 4px;
