--- a/src/styles/custom-block-table-width-auto.less
+++ b/src/styles/custom-block-table-width-auto.less
@@ -1,28 +1,27 @@
 // Copyright (C) 2023 Zuoqiu Yingyi
-// 
+//
 // This program is free software: you can redistribute it and/or modify
 // it under the terms of the GNU Affero General Public License as
 // published by the Free Software Foundation, either version 3 of the
 // License, or (at your option) any later version.
-// 
+//
 // This program is distributed in the hope that it will be useful,
 // but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 // GNU Affero General Public License for more details.
-// 
+//
 // You should have received a copy of the GNU Affero General Public License
 // along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 /* 表格自动宽度 */
 
 :root {
-    &:not([plugin-custom-block-disabled~=table-width-auto]) {
-
+    &:not([plugin-custom-block-disabled~="table-width-auto"]) {
         body:has(> #preview[custom-block-export]),
         .b3-dialog__content:has(> #preview[custom-block-export]),
         .protyle-content {
             .protyle-wysiwyg {
-                [custom-block-table-width~=auto] {
+                [custom-block-table-width~="auto"] {
                     &[data-node-id].table {
                         table {
                             /* 自动宽度 */
