--- a/src/styles/custom-block-width-full.less
+++ b/src/styles/custom-block-width-full.less
@@ -1,35 +1,33 @@
 // Copyright (C) 2023 Zuoqiu Yingyi
-// 
+//
 // This program is free software: you can redistribute it and/or modify
 // it under the terms of the GNU Affero General Public License as
 // published by the Free Software Foundation, either version 3 of the
 // License, or (at your option) any later version.
-// 
+//
 // This program is distributed in the hope that it will be useful,
 // but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 // GNU Affero General Public License for more details.
-// 
+//
 // You should have received a copy of the GNU Affero General Public License
 // along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 /* 全宽显示 */
 
 :root {
-    &:not([plugin-custom-block-disabled~=width-full]) {
-
+    &:not([plugin-custom-block-disabled~="width-full"]) {
         body:has(> #preview[custom-block-export]),
         .b3-dialog__content:has(> #preview[custom-block-export]),
         .protyle-content {
             .protyle-wysiwyg {
-                [custom-block-width~=full] {
+                [custom-block-width~="full"] {
                     &[data-node-id] {
                         .iframe-content {
-
                             &,
-                            >iframe,
-                            >video,
-                            >audio {
+                            > iframe,
+                            > video,
+                            > audio {
                                 width: 100% !important;
                             }
                         }
