fix(custom-block): 修复列表导图视图 | Fix list mind-map view.

--- a/src/styles/custom-block-list-view-map.less
+++ b/src/styles/custom-block-list-view-map.less
@@ -98,7 +98,8 @@
                     &.li {
                         /* 列表项文字设置居中 */
                         display: flex;
-                        // align-items: center;
+                        justify-content: flex-start;
+                        flex-direction: row;
 
                         &:first-child::after,
                         &:nth-last-child(2)::before {
