fix(custom-block): 修复列表表格视图 | Fix list table view.

--- a/src/styles/custom-block-list-view-table.less
+++ b/src/styles/custom-block-list-view-table.less
@@ -58,6 +58,7 @@
                     /* 列表项 */
                     // width: auto;
                     display: flex;
+                    flex-direction: row;
                     // overflow-x: auto;
                     outline: 1px solid var(--b3-theme-on-surface);
 
