fix(custom-block): 修复列表看板视图排列样式问题 | Fix the issue of list kanban view arrangement style.
https://github.com/Zuoqiu-Yingyi/siyuan-plugin-custom-block/issues/36

--- a/src/styles/custom-block-list-view-board.less
+++ b/src/styles/custom-block-list-view-board.less
@@ -54,7 +54,11 @@
                     &[data-node-id].list {
                         /* 看板块样式 */
                         display: flex;
+                        flex-direction: row;
+
                         overflow-x: auto;
+                        padding-top: 1em;
+                        padding-bottom: 1em;
 
                         > [data-node-id].li {
                             /* 子看板 */
