--- a/src/styles/custom-block-list-view-table.less
+++ b/src/styles/custom-block-list-view-table.less
@@ -27,6 +27,9 @@
         .protyle-content {
             [custom-block-list-view="table"] {
                 &[data-node-id].list {
+                    padding-top: 1em;
+                    padding-bottom: 1em;
+
                     & > [data-node-id].li {
                         > .protyle-attr {
                             > .protyle-attr--refcount {
