--- a/src/styles/custom-block-width-full.less
+++ b/src/styles/custom-block-width-full.less
@@ -31,6 +31,13 @@
                                 width: 100% !important;
                             }
                         }
+
+                        &.table {
+                            table {
+                                width: 100%;
+                                display: table;
+                            }
+                        }
                     }
                 }
             }
